# rssspit

./: README.md  pyproject.toml  rssspit  rssspit.py
