[tool.poetry]
name = "rssspit"
version = "0.1.0"
description = "RSS Feed viewer"
authors = ["Linus W. Monie <zerox7felf@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
feedparser = "^6.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
